chassis/tests/failing/missing_dep.stderr
error: custom attribute panicked
  --> $DIR/missing_dep.rs:11:1
   |
11 | #[integration]
   | ^^^^^^^^^^^^^^
   |
   = help: message: Missing binding for `IntArg` to resolve `TODO`
